<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical" >

        <TextView
            android:layout_weight="30"
            android:text="@string/foreign_currency"
            android:textColor="@color/turquoise"
            style="@style/label"/>

        <Spinner
            android:id="@+id/spn_foreign"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top" />

        <TextView
            android:layout_weight="15"
            android:text="@string/enter_amount"
            android:textColor="@color/grey_med"
            android:textSize="12sp"
            style="@style/label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="20"
        android:background="@color/grey_dark">

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/grey_very_dark"
            android:digits="0123456789."
            android:gravity="center_vertical"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textSize="30sp">

            <requestFocus/>

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_calc"
        android:textColor="@color/grey_light"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">

        <TextView
            android:layout_weight="30"
            android:text="@string/home_currency"
            android:textColor="@color/turquoise"
            style="@style/label"/>

        <Spinner
            android:id="@+id/spn_home"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top" />

        <TextView
            android:layout_weight="15"
            android:text="@string/calc_result"
            android:textColor="@color/grey_med"
            android:textSize="12sp"
            style="@style/label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grey_dark">

        <TextView
            android:id="@+id/txt_converted"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/grey_med_dark"
            android:gravity="center_vertical"
            android:textSize="30sp"
            android:typeface="normal"/>

    </LinearLayout>

</LinearLayout>
